--- a/.github/workflows/tidy-vendor.yml
+++ b/.github/workflows/tidy-vendor.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.25.4'
+          go-version: stable
 
       - name: Run make tidy-vendor
         run: make tidy-vendor
